# mcp-plesk-extension-guide

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  main.py  pyproject.toml  server.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/ISSUE_TEMPLATES/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
scripts/: download_docs.py
tests/: test_download_docs.py  test_main.py  test_server.py
