[project]
name = "extensions-guide"
version = "0.1.0"
description = "MCP server for semantic search over Plesk Extensions Guide documentation using RAG"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = "MIT"
keywords = ["mcp", "plesk", "extensions", "rag", "semantic-search", "documentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.4.1",
    "fastmcp>=2.14.5",
    "openai>=2.16.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[project.urls]
"Homepage" = "https://github.com/barateza/mcp-plesk-extension-guide"
"Documentation" = "https://docs.plesk.com/en-US/obsidian/extensions-guide/"
"Bug Tracker" = "https://github.com/barateza/mcp-plesk-extension-guide/issues"
"Repository" = "https://github.com/barateza/mcp-plesk-extension-guide.git"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*.py"]
exclude = ["tests"]

[tool.setuptools.package-data]
"*" = ["*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["."]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class.*\\bProtocol\\b",  # Ignore protocol classes
]

[tool.coverage.html]
directory = "htmlcov"
title = "extensions-guide"